[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubseek"
version = "2.0.0"
description = "Natural language GitHub project finder powered by AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "diskcache>=5.6.3",
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.scripts]
hubseek = "src.main:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
